# cypher-cloud

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cypher_cloud/: auth.py  config.py  database.py  files.py  main.py  models.py  schemas.py  vault_client.py
docker/api/: Dockerfile
docker/nginx/: Dockerfile  default.conf
docker/vault/: agent-token  agent.hcl  root_token
docker/vault-init/: start-dev.sh
files/: 1_Курсовая Хеллман.docx
frontend/: Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  middleware.ts  page.tsx
frontend/src/app/confirm-email/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Navigation.tsx
frontend/src/components/auth/: ChangePassword.tsx
frontend/src/components/ui/: ThemeToggle.tsx  card.tsx  password-input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/shared/: constants.ts
