[project]
name = "cypher-cloud"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.6,<0.116",
    "uvicorn[standard]>=0.32.1,<0.33",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "pyotp>=2.9.0,<3",
    "cryptography>=44.0.0,<45",
    "python-multipart>=0.0.19,<0.0.20",
    "aiofiles>=24.1.0,<25",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "psycopg2-binary>=2.9.10,<3",
    "pydantic[email]>=2.10.3,<3",
    "asyncpg>=0.30.0,<0.31",
    "pydantic-settings>=2.6.1,<3",
    "fastapi-mail>=1.5.0,<2",
    "hvac>=2.3.0,<3",
    "webauthn>=2.3.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
